infra/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: self-healing
  labels:
    name: self-healing
    part-of: remediation-system
